# claude-detection-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
cdp/: __init__.py  api.py  cli.py  config.py  engine.py  enrich.py  ingest.py  models.py  playbook.py  prompts.py  sigma.py  store.py  triage.py
detections/: README.md
detections/credential_access/: brute_force_login.yml  suspicious_iam_policy_change.yml
detections/execution/: powershell_encoded_command.yml  unusual_process_lineage.yml
detections/exfiltration/: unusual_s3_data_egress.yml
detections/persistence/: new_service_install.yml
enrichment/: assets.yaml
evals/: README.md  __init__.py  _build_ground_truth.py  ground_truth.yaml  run_eval.py
evals/reports/: seed-run.json  seed-run.md
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_enrich.py  test_eval.py  test_ingest.py  test_models.py  test_playbook.py  test_prompts.py  test_sigma.py  test_store.py  test_triage.py
